--- a/sites/DC2/group_vars/DC2_CONNECTED_ENDPOINTS.yml
+++ b/sites/DC2/group_vars/DC2_CONNECTED_ENDPOINTS.yml
@@ -2,11 +2,11 @@
 port_profiles:
 
   - profile: PP-VLAN10
-    mode: "access"
+    mode: "trunk"
     vlans: "10"
     spanning_tree_portfast: edge
   - profile: PP-VLAN20
-    mode: "access"
+    mode: "trunk"
     vlans: "20"
     spanning_tree_portfast: edge
 
@@ -14,32 +14,32 @@ port_profiles:
 # ---------------- Endpoint Connectivity ---------------- #
 ###########################################################
 
-# servers:
+servers:
 
-# # --------------------------------------------------------#
-# # Site1 RACK1 Endpoints
-# # --------------------------------------------------------#
+# --------------------------------------------------------#
+# Site1 RACK1 Endpoints
+# --------------------------------------------------------#
 
-#   - name: s1-host1                                      # Server name
-#     rack: RACK1                                         # Informational RACK (optional)
-#     adapters:
-#       - endpoint_ports: [ eth1, eth2 ]                  # Server port to connect (optional)
-#         switch_ports: [ Ethernet4, Ethernet4 ]          # Switch port to connect server (required)
-#         switches: [ s1-leaf1, s1-leaf2 ]                # Switch to connect server (required)
-#         profile: PP-VLAN10                              # Port profile to apply (required)
-#         port_channel:
-#           mode: active
+  - name: DC2-SW1                                      # Server name
+    rack: RACK1                                         # Informational RACK (optional)
+    adapters:
+      - endpoint_ports: [ eth1, eth2 ]                  # Server port to connect (optional)
+        switch_ports: [ Ethernet3, Ethernet3 ]          # Switch port to connect server (required)
+        switches: [ DC2-CL1, DC2-CL2 ]                # Switch to connect server (required)
+        profile: PP-VLAN10                              # Port profile to apply (required)
+        port_channel:
+          mode: active
 
-# # --------------------------------------------------------#
-# # Site1 RACK2 Endpoints
-# # --------------------------------------------------------#
+# --------------------------------------------------------#
+# Site1 RACK2 Endpoints
+# --------------------------------------------------------#
 
-#   - name: s1-host2                                      # Server name
-#     rack: RACK2                                         # Informational RACK (optional)
-#     adapters:
-#       - endpoint_ports: [ eth1, eth2 ]                  # Server port to connect (optional)
-#         switch_ports: [ Ethernet4, Ethernet4 ]          # Switch port to connect server (required)
-#         switches: [ s1-leaf3, s1-leaf4 ]                # Switch to connect server (required)
-#         profile: PP-VLAN20                              # Port profile to apply (required)
-#         port_channel:
-#           mode: active
+  - name: DC2-SW2                                      # Server name
+    rack: RACK2                                         # Informational RACK (optional)
+    adapters:
+      - endpoint_ports: [ eth1, eth2 ]                  # Server port to connect (optional)
+        switch_ports: [ Ethernet3, Ethernet3 ]          # Switch port to connect server (required)
+        switches: [ DC2-CL3, DC2-CL4 ]                # Switch to connect server (required)
+        profile: PP-VLAN20                              # Port profile to apply (required)
+        port_channel:
+          mode: active
