--- a/ansible.cfg
+++ b/ansible.cfg
@@ -19,7 +19,7 @@ collections_paths = ~/.ansible/collections
 jinja2_extensions =  jinja2.ext.loopcontrols,jinja2.ext.do,jinja2.ext.i18n
 
 # Enable the YAML callback plugin, providing much easier to read terminal output. (https://docs.ansible.com/ansible/latest/plugins/callback.html#callback-plugins)
-stdout_callback = yaml
+# stdout_callback = yaml
 
 # Permit the use of callback plugins when running ad-hoc commands
 bin_ansible_callbacks = True
