--- a/sites/DC2/group_vars/DC2_NETWORK_SERVICES.yml
+++ b/sites/DC2/group_vars/DC2_NETWORK_SERVICES.yml
@@ -1,16 +1,19 @@
-# ---
-# tenants:
-#   - name: S1_FABRIC
-#     mac_vrf_vni_base: 10000
-#     vrfs:
-#       - name: OVERLAY
-#         vrf_vni: 10
-#         svis:
-#           - id: 10
-#             name: 'Ten'
-#             enabled: true
-#             ip_address_virtual: 10.10.10.1/24
-#           - id: 20
-#             name: 'Twenty'
-#             enabled: true
-#             ip_address_virtual: 10.20.20.1/24
+---
+tenants:
+  - name: DC2_FABRIC
+    mac_vrf_vni_base: 10000
+    vrfs:
+      - name: OVERLAY
+        vrf_vni: 10
+        vtep_diagnostic:
+          loopback: 100
+          loopback_ip_range: 10.100.100.0/24
+        svis:
+          - id: 10
+            name: 'Ten'
+            enabled: true
+            ip_address_virtual: 10.10.10.1/24
+          - id: 20
+            name: 'Twenty'
+            enabled: true
+            ip_address_virtual: 10.10.20.1/24
