--- a/sites/DC1/intended/configs/DC1-SP1.cfg
+++ b/sites/DC1/intended/configs/DC1-SP1.cfg
@@ -178,4 +178,11 @@ management api http-commands
    vrf MGMT
       no shutdown
 !
+management ssh
+   idle-timeout 5
+   no shutdown
+   !
+   vrf MGMT
+      no shutdown
+!
 end
