--- a/sites/DC2/config_backup/DC2-BL2_post_running-config.conf
+++ b/sites/DC2/config_backup/DC2-BL2_post_running-config.conf
@@ -276,4 +276,10 @@ router bgp 65203
       neighbor 10.252.2.8 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
 !
+management ssh
+   idle-timeout 5
+   !
+   vrf MGMT
+      no shutdown
+!
 end
