--- a/sites/DC2/config_backup/DC2-SP1_post_running-config.conf
+++ b/sites/DC2/config_backup/DC2-SP1_post_running-config.conf
@@ -168,4 +168,10 @@ router bgp 65200
       no neighbor EVPN-OVERLAY-PEERS activate
       neighbor IPv4-UNDERLAY-PEERS activate
 !
+management ssh
+   idle-timeout 5
+   !
+   vrf MGMT
+      no shutdown
+!
 end
