--- a/sites/DC1/intended/structured_configs/DC1-BL2.yml
+++ b/sites/DC1/intended/structured_configs/DC1-BL2.yml
@@ -364,6 +364,12 @@ virtual_source_nat_vrfs:
   ip_address: 10.100.100.8
 metadata:
   platform: cEOS
+management_ssh:
+  idle_timeout: 5
+  enable: true
+  vrfs:
+  - name: MGMT
+    enable: true
 banners:
   login: '!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
