--- a/sites/DC1/inventory.yml
+++ b/sites/DC1/inventory.yml
@@ -1,28 +1,47 @@
 ---
-SITE1:
+all:
   children:
     CVP:
       hosts:
-        cvp:
-    DC1_FABRIC:
+        cv_ztp:
+          # Address of host that will act as DHCP server
+          ansible_host: 10.88.160.63
+        cv_server:
+          # section for CVP primary node address
+          ansible_httpapi_host: 10.88.160.63
+          ansible_host: 10.88.160.63
+          ansible_connection: httpapi
+          ansible_httpapi_use_ssl: false
+          ansible_httpapi_validate_certs: false
+          ansible_network_os: eos
+          ansible_httpapi_port: 443
+          fabric_name: DC1_FABRIC
+          # Configuration to get Virtual Env information
+          ansible_python_interpreter: $(which python3)
+
+    GLOBAL:
       children:
-        DC1_SPINES:
-          hosts:
-            DC1-SP1:
-            DC1-SP2:
-        DC1_LEAFS:
-          hosts:
-            DC1-CL1:
-            DC1-CL2:
-            DC1-CL3:
-            DC1-CL4:
-            DC1-BL1:
-            DC1-BL2:
-    DC1_NETWORK_SERVICES:
-      children:
-        DC1_SPINES:
-        DC1_LEAFS:
-    DC1_CONNECTED_ENDPOINTS:
-      children:
-        DC1_SPINES:
-        DC1_LEAFS:
+        DC1:
+          children:
+            DC1_FABRIC:
+              children:
+                DC1_SPINES:
+                  hosts:
+                    DC1-SP1:
+                    DC1-SP2:
+                DC1_LEAFS:
+                  hosts:
+                    DC1-CL1:
+                    DC1-CL2:
+                    DC1-CL3:
+                    DC1-CL4:
+                    DC1-BL1:
+                    DC1-BL2:
+            DC1_NETWORK_SERVICES:
+              children:
+                DC1_SPINES:
+                DC1_LEAFS:
+            DC1_CONNECTED_ENDPOINTS:
+              children:
+                DC1_SPINES:
+                DC1_LEAFS:
