--- a/sites/DC2/config_backup/DC2-CL1_post_running-config.conf
+++ b/sites/DC2/config_backup/DC2-CL1_post_running-config.conf
@@ -263,4 +263,10 @@ router bgp 65201
       neighbor 10.252.2.1 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
 !
+management ssh
+   idle-timeout 5
+   !
+   vrf MGMT
+      no shutdown
+!
 end
