--- a/sites/DC1/config_backup/DC1-BL1_post_running-config.conf
+++ b/sites/DC1/config_backup/DC1-BL1_post_running-config.conf
@@ -10,7 +10,7 @@ username cvpadmin privilege 15 role network-admin secret sha512 $6$PyJWbjPrhxpt9
 username marcelo privilege 15 role network-admin secret sha512 $6$JOlaFRui.uKQAgcY$F.A6VZCIcIlbRMrk//U2.q9ucyl95ymC1dGz9BLpwl3NkIhLbOkCh.N.nYaiLBIUdz3mXzAAutF/APAAtamUB.
 !
 daemon TerminAttr
-   exec /usr/bin/TerminAttr -cvaddr=10.88.160.63:9910 -cvauth=token,/tmp/token -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -taillogs
+   exec /usr/bin/TerminAttr -cvaddr=10.88.160.63:9910 -cvauth=token,/tmp/token -cvvrf=MGMT -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -taillogs
    no shutdown
 !
 switchport default mode routed
@@ -18,6 +18,10 @@ switchport default mode routed
 vlan internal order ascending range 1006 1199
 !
 transceiver qsfp default-mode 4x10G
+!
+interface defaults
+   ethernet
+      shutdown
 !
 service routing protocols model multi-agent
 !
@@ -71,36 +75,44 @@ interface Port-Channel8
 !
 interface Ethernet1
    description P2P_LINK_TO_DC1-SP1_Ethernet5
+   no shutdown
    mtu 1500
    no switchport
    ip address 172.16.1.17/31
 !
 interface Ethernet2
    description P2P_LINK_TO_DC1-SP2_Ethernet5
+   no shutdown
    mtu 1500
    no switchport
    ip address 172.16.1.19/31
 !
 interface Ethernet3
+   shutdown
    no switchport
 !
 interface Ethernet4
    description P2P_LINK_TO_DC2-BL1_Ethernet4
+   no shutdown
    mtu 1500
    no switchport
    ip address 172.16.255.0/31
 !
 interface Ethernet5
+   shutdown
    no switchport
 !
 interface Ethernet6
+   shutdown
    no switchport
 !
 interface Ethernet7
+   shutdown
    no switchport
 !
 interface Ethernet8
    description MLAG_PEER_DC1-BL2_Ethernet8
+   no shutdown
    no switchport
    channel-group 8 mode active
 !
@@ -179,7 +191,7 @@ mlag configuration
 !
 ip route vrf MGMT 0.0.0.0/0 10.88.169.129
 !
-ntp server vrf MGMT 10.88.160.60 iburst local-interface Management1
+ntp server vrf MGMT 0.pool.ntp.org iburst local-interface Management1
 !
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
@@ -275,6 +287,8 @@ router bgp 65103
       router-id 10.250.1.7
       neighbor 10.252.1.9 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
+!
+ip tacacs vrf MGMT source-interface Management1
 !
 management ssh
    idle-timeout 5
