--- a/sites/DC1/intended/configs/DC1-BL1.cfg
+++ b/sites/DC1/intended/configs/DC1-BL1.cfg
@@ -1,12 +1,17 @@
 !RANCID-CONTENT-TYPE: arista
 !
 daemon TerminAttr
-   exec /usr/bin/TerminAttr -cvaddr=10.88.160.63:9910 -cvauth=token,/tmp/token -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -taillogs
+   exec /usr/bin/TerminAttr -cvaddr=10.88.160.63:9910 -cvauth=token,/tmp/token -cvvrf=MGMT -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -taillogs
    no shutdown
 !
 switchport default mode routed
 !
 vlan internal order ascending range 1006 1199
+!
+interface defaults
+   ethernet
+      shutdown
+   mtu 1500
 !
 transceiver qsfp default-mode 4x10G
 !
@@ -15,7 +20,7 @@ service routing protocols model multi-agent
 hostname DC1-BL1
 dns domain atd.lab
 !
-ntp server vrf MGMT 10.88.160.60 iburst local-interface Management1
+ntp server vrf MGMT 0.pool.ntp.org iburst local-interface Management1
 !
 spanning-tree mode mstp
 no spanning-tree vlan-id 4093-4094
@@ -265,6 +270,8 @@ router bgp 65103
       router-id 10.250.1.7
       neighbor 10.252.1.9 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
+!
+ip tacacs vrf MGMT source-interface Management1
 !
 banner login
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
