--- a/sites/DC2/config_backup/DC2-SP2_post_running-config.conf
+++ b/sites/DC2/config_backup/DC2-SP2_post_running-config.conf
@@ -10,7 +10,7 @@ username cvpadmin privilege 15 role network-admin secret sha512 $6$PyJWbjPrhxpt9
 username marcelo privilege 15 role network-admin secret sha512 $6$JOlaFRui.uKQAgcY$F.A6VZCIcIlbRMrk//U2.q9ucyl95ymC1dGz9BLpwl3NkIhLbOkCh.N.nYaiLBIUdz3mXzAAutF/APAAtamUB.
 !
 daemon TerminAttr
-   exec /usr/bin/TerminAttr -cvaddr=10.88.160.63:9910 -cvauth=token,/tmp/token -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -taillogs
+   exec /usr/bin/TerminAttr -cvaddr=10.88.160.63:9910 -cvauth=token,/tmp/token -cvvrf=MGMT -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -taillogs
    no shutdown
 !
 switchport default mode routed
@@ -18,6 +18,10 @@ switchport default mode routed
 vlan internal order ascending range 1006 1199
 !
 transceiver qsfp default-mode 4x10G
+!
+interface defaults
+   ethernet
+      shutdown
 !
 service routing protocols model multi-agent
 !
@@ -42,44 +46,52 @@ aaa authorization exec default local
 !
 interface Ethernet1
    description P2P_LINK_TO_DC2-CL1_Ethernet2
+   no shutdown
    mtu 1500
    no switchport
    ip address 172.16.2.2/31
 !
 interface Ethernet2
    description P2P_LINK_TO_DC2-CL2_Ethernet2
+   no shutdown
    mtu 1500
    no switchport
    ip address 172.16.2.6/31
 !
 interface Ethernet3
    description P2P_LINK_TO_DC2-CL3_Ethernet2
+   no shutdown
    mtu 1500
    no switchport
    ip address 172.16.2.10/31
 !
 interface Ethernet4
    description P2P_LINK_TO_DC2-CL4_Ethernet2
+   no shutdown
    mtu 1500
    no switchport
    ip address 172.16.2.14/31
 !
 interface Ethernet5
    description P2P_LINK_TO_DC2-BL1_Ethernet2
+   no shutdown
    mtu 1500
    no switchport
    ip address 172.16.2.18/31
 !
 interface Ethernet6
    description P2P_LINK_TO_DC2-BL2_Ethernet2
+   no shutdown
    mtu 1500
    no switchport
    ip address 172.16.2.22/31
 !
 interface Ethernet7
+   shutdown
    no switchport
 !
 interface Ethernet8
+   shutdown
    no switchport
 !
 interface Loopback0
@@ -99,7 +111,7 @@ ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
 !
 ip route vrf MGMT 0.0.0.0/0 10.88.169.129
 !
-ntp server vrf MGMT 10.88.160.60 iburst local-interface Management1
+ntp server vrf MGMT 0.pool.ntp.org iburst local-interface Management1
 !
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
@@ -167,6 +179,8 @@ router bgp 65200
    address-family ipv4
       no neighbor EVPN-OVERLAY-PEERS activate
       neighbor IPv4-UNDERLAY-PEERS activate
+!
+ip tacacs vrf MGMT source-interface Management1
 !
 management ssh
    idle-timeout 5
