--- a/sites/DC2/intended/structured_configs/DC2-BL2.yml
+++ b/sites/DC2/intended/structured_configs/DC2-BL2.yml
@@ -151,6 +151,16 @@ static_routes:
   gateway: 10.88.169.129
 service_routing_protocols_model: multi-agent
 ip_routing: true
+daemon_terminattr:
+  cvaddrs:
+  - 10.88.160.63:9910
+  cvauth:
+    method: token
+    token_file: /tmp/token
+  cvvrf: MGMT
+  smashexcludes: ale,flexCounter,hardware,kni,pulse,strata
+  ingestexclude: /Sysdb/cell/1/agent,/Sysdb/cell/2/agent
+  disable_aaa: false
 vlan_internal_order:
   allocation: ascending
   range:
@@ -364,12 +374,12 @@ virtual_source_nat_vrfs:
   ip_address: 10.100.100.8
 metadata:
   platform: cEOS
-management_ssh:
-  idle_timeout: 5
-  enable: true
-  vrfs:
-  - name: MGMT
-    enable: true
+interface_defaults:
+  mtu: 1500
+  ethernet:
+    shutdown: true
+switchport_default:
+  mode: routed
 banners:
   login: '!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
@@ -391,5 +401,12 @@ banners:
     EOF
 
     '
-switchport_default:
-  mode: routed
+management_ssh:
+  idle_timeout: 5
+  enable: true
+  vrfs:
+  - name: MGMT
+    enable: true
+ip_tacacs_source_interfaces:
+- name: Management1
+  vrf: MGMT
