--- a/playbooks/cvp2.yml
+++ b/playbooks/cvp2.yml
@@ -1,6 +1,6 @@
 ---
 - name: Build Switch configuration
-  hosts: cvp
+  hosts: cv_server
   gather_facts: false
 
   tasks:
@@ -9,6 +9,6 @@
       ansible.builtin.import_role:
         name: arista.avd.eos_config_deploy_cvp
       vars:
-        container_root: 'SITE2_FABRIC'
+        container_root: 'DC2_FABRIC'
         configlets_prefix: 'AVD'
         state: present
