--- a/global_vars/global_dc_vars.yml
+++ b/global_vars/global_dc_vars.yml
@@ -48,7 +48,14 @@ custom_structured_configuration_banners:
 
     EOF
 
-
+# Syslog
+logging:
+  vrfs:
+    - name: MGMT
+      source_interface: Management1
+      hosts:
+        - name: 10.200.0.108
+        - name: 10.200.1.108
 
 # CVP node variables
 cv_collection: v3
