--- a/sites/DC1/intended/configs/DC1-BL2.cfg
+++ b/sites/DC1/intended/configs/DC1-BL2.cfg
@@ -17,6 +17,10 @@ transceiver qsfp default-mode 4x10G
 !
 service routing protocols model multi-agent
 !
+logging vrf MGMT host 10.200.0.108
+logging vrf MGMT host 10.200.1.108
+logging vrf MGMT source-interface Management1
+!
 hostname DC1-BL2
 dns domain atd.lab
 !
