--- a/sites/DC1/config_backup/DC1-CL1_post_running-config.conf
+++ b/sites/DC1/config_backup/DC1-CL1_post_running-config.conf
@@ -25,6 +25,10 @@ interface defaults
 !
 service routing protocols model multi-agent
 !
+logging vrf MGMT host 10.200.0.108
+logging vrf MGMT host 10.200.1.108
+logging vrf MGMT source-interface Management1
+!
 hostname DC1-CL1
 dns domain atd.lab
 !
@@ -41,6 +45,12 @@ vlan 10
 !
 vlan 20
    name Twenty
+!
+vlan 30
+   name Thirty
+!
+vlan 40
+   name Forty
 !
 vlan 3009
    name MLAG_iBGP_OVERLAY
@@ -151,6 +161,16 @@ interface Vlan20
    vrf OVERLAY
    ip address virtual 10.10.20.1/24
 !
+interface Vlan30
+   description Thirty
+   vrf OVERLAY
+   ip address virtual 10.30.30.1/24
+!
+interface Vlan40
+   description Forty
+   vrf OVERLAY
+   ip address virtual 10.40.40.1/24
+!
 interface Vlan3009
    description MLAG_PEER_L3_iBGP: vrf OVERLAY
    mtu 1500
@@ -175,6 +195,8 @@ interface Vxlan1
    vxlan udp-port 4789
    vxlan vlan 10 vni 10010
    vxlan vlan 20 vni 10020
+   vxlan vlan 30 vni 10030
+   vxlan vlan 40 vni 10040
    vxlan vrf OVERLAY vni 10
 !
 ip virtual-router mac-address 00:1c:73:00:00:99
@@ -257,6 +279,16 @@ router bgp 65101
    vlan 20
       rd 10.250.1.3:10020
       route-target both 10020:10020
+      redistribute learned
+   !
+   vlan 30
+      rd 10.250.1.3:10030
+      route-target both 10030:10030
+      redistribute learned
+   !
+   vlan 40
+      rd 10.250.1.3:10040
+      route-target both 10040:10040
       redistribute learned
    !
    address-family evpn
