--- a/sites/DC2/config_backup/DC2-SP1_post_running-config.conf
+++ b/sites/DC2/config_backup/DC2-SP1_post_running-config.conf
@@ -25,6 +25,10 @@ interface defaults
 !
 service routing protocols model multi-agent
 !
+logging vrf MGMT host 10.200.0.108
+logging vrf MGMT host 10.200.1.108
+logging vrf MGMT source-interface Management1
+!
 hostname DC2-SP1
 dns domain atd.lab
 !
